Fixes to work with updated runit and limits classes. Work with non-home base directories. Corrected sunrmi/sunjdk typo.  Updated documentation.